add employee implementation

--- a/DapperTest.Api/appsettings.json
+++ b/DapperTest.Api/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=CompanyDB; Integrated Security=True;"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
   }
 }
