--- a/DapperTest.Api/DapperTest.Api.csproj
+++ b/DapperTest.Api/DapperTest.Api.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DapperTest.Core\DapperTest.Core.csproj" />
+    <ProjectReference Include="..\DapperTest.Data\DapperTest.Data.csproj" />
   </ItemGroup>
 
 </Project>
